@@ -17,36 +17,11 @@
   (:method ((object structure-object) stream)
     (system::print-structure object stream))
   (:method ((object class) stream)
-    (if *print-readably*
-      (write (sys::make-load-time-eval
-               `(FIND-CLASS ',(class-classname object)))
-             :stream stream)
-      (print-unreadable-object (object stream :type t)
-        (write (class-classname object) :stream stream)
-        (when (semi-standard-class-p object)
-          (if (and (slot-boundp object '$current-version)
-                   (class-version-p (class-current-version object))
-                   (slot-boundp object '$precedence-list))
-            (progn
-              (when (< (class-initialized object) 3) ; not yet finalized?
-                (write-string " " stream)
-                (write :incomplete :stream stream))
-              ;; FIXME: Overhaul this questionable and confusing feature.
-              (let ((serial (cv-serial (class-current-version object))))
-                (unless (eql serial 0)
-                  (write-string " " stream)
-                  (write :version :stream stream)
-                  (write-string " " stream)
-                  (write serial :stream stream))))
-            (progn
-              (write-string " " stream)
-              (write :uninitialized :stream stream)))))))
+    (print-object-<class> object stream))
   (:method ((object slot-definition) stream)
-    (print-unreadable-object (object stream :type t :identity t)
-      (write (slot-definition-name object) :stream stream)))
+    (print-object-<slot-definition> object stream))
   (:method ((object eql-specializer) stream)
-    (print-unreadable-object (object stream :type t)
-      (write (eql-specializer-object object) :stream stream)))
+    (print-object-<eql-specializer> object stream))
   (:method ((object method-combination) stream)
     (print-object-<method-combination> object stream))
   (:method ((object standard-method) stream)
